# octabot-rust-sdk

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  Octafile.yml  README.md
.github/workflows/: release.yml
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/keyvalue/: Cargo.toml
crates/keyvalue/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: lib.rs
examples/http/: Cargo.toml
examples/http/src/: lib.rs
examples/keyvalue/: Cargo.toml
examples/keyvalue/src/: lib.rs
examples/logging/: Cargo.toml
examples/logging/src/: lib.rs
src/: bindings.rs  error.rs  keyvalue.rs  lib.rs  logger.rs
wit/: deps.toml  world.wit
