[package]
name = "octabot-rust-sdk"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = "https://github.com/OctaHive/octabot-rust-sdk#readme"
readme = "README.md"
description = """
The Octabot Rust SDK makes it easy to build plugins in Rust.
"""

[lib]
name = "octabot_rust_sdk"

[dependencies]
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
wit-bindgen = { workspace = true }

[workspace]
resolver = "2"
members = [
  "examples/hello-world",
  "examples/keyvalue",
  "examples/logging",
  "examples/http",
]

[workspace.package]
version = "0.1.1"
authors = ["Roman Efremenko <roman.efremenko@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OctaHive/octabot-rust-sdk"
rust-version = "1.84"
homepage = "https://github.com/OctaHive/octabot-rust-sdk#readme"

[workspace.dependencies]
wit-bindgen = "0.43.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[features]
kv = ["log/kv"]
