[package]
name = "error"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
bindings = { version = "0.1.0", path = "../bindings" }
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
