[package]
name = "keyvalue"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
bindings = { version = "0.1.0", path = "../bindings" }
error = { version = "0.1.0", path = "../error" }
wit-bindgen = { workspace = true }
