[package]
name = "logger"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true

[dependencies]
bindings = { version = "0.1.0", path = "../bindings" }
log = "0.4.22"
wit-bindgen = { workspace = true }

[features]
kv = ["log/kv"]
