[package]
name = "hello-world-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
octabot-rust-sdk = { path = "../.." }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[package.metadata.component]
package = "example:hello-world"
