[package]
name = "http-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
octabot-rust-sdk = { path = "../.." }
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
url = "2.5.4"
waki = "0.5.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[package.metadata.component]
package = "example:http"
