[package]
name = "http-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
octabot-rust-sdk = { path = "../.." }
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
url = "2.5.4"
waki = "0.5.1"

[package.metadata.component]
package = "example:http"
